# stock_analytics

./: README.md  alembic.ini  main.py  pyproject.toml
api/: data_analyst.py  data_fetcher.py  data_processor.py
configuration/: config.py
controller/: stock_analytics.py
db_config/: data_fetching_db.py
migrations/: env.py
migrations/versions/: 2023_03_25_0831-ee04488f087e_adds_stocks_table.py  2023_03_25_1232-36c415008441_id_autoincrement.py
models/data/: data_fetching_models.py
models/request/: data_fetching_request.py
repository/data_analytics/: data.json  feature_selection.ipynb
repository/data_fetching/: data_fetcher.py
