[tool.poetry]
name = "stock-analytics"
version = "0.1.0"
description = "processing financial data and stock price prediction"
authors = ["Aleksei Mikhalev <mikhalev.aleksei1@gmail.com>"]
license = "GNU General Public License 3 (GPL-3.0)"
readme = "README.md"
packages = [{include = "stock_analytics"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.0"
uvicorn = {extras = ["standard"], version = "^0.21.1"}
sqlalchemy = "^2.0.7"
pytest = "^7.2.2"
httpx = "^0.23.3"
loguru = "^0.6.0"
aiopg = "^1.4.0"
asyncpg = "^0.27.0"
tiingo = {extras = ["pandas"], version = "^0.14.0"}
alembic = "^1.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
